--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -5,7 +5,7 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" crossorigin="anonymous")
-    title #{siteName} | 
+    title #{siteName} | #{pageTitle}
   body 
     include ../partials/header
 
