--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,9 +1,10 @@
 header.header 
   .header__column
-    i.fab.fa-youtube Header Youtube
+    a(href=routes.home)
+      i.fab.fa-youtube
   .header__column
     ul 
       li 
-        a(href="/join") Join
+        a(href=routes.join) Join
       li 
-        a(href="#none") Login
+        a(href=routes.login) Login
