--- a/views/search.pug
+++ b/views/search.pug
@@ -1,4 +1,13 @@
 extends layouts/main
+include mixins/videoBlock
 
 block content
-  h1 search
+  .search__header 
+    h3 You searched: #{searchingBy}
+  .search__videos 
+    each videoItem in videos 
+      +videoBlock({
+        title: videoItem.title,
+        views: videoItem.views,
+        videoFile: videoItem.videoFile
+      })
