--- a/views/home.pug
+++ b/views/home.pug
@@ -5,6 +5,7 @@ block content
   .videos
     each videoItem in videos 
       +videoBlock({
+        id: videoItem.id,
         title: videoItem.title,
         views: videoItem.views,
         videoFile: videoItem.videoFile
