--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -5,5 +5,5 @@
     |Continue with Github
   button.social-login--facebook
     span
-      i.fa.fa-facebook 
+      i.fab.fa-facebook 
     |Continue with Facebook
