--- a/views/home.pug
+++ b/views/home.pug
@@ -8,7 +8,7 @@ block content
         id: videoItem.id,
         title: videoItem.title,
         views: videoItem.views,
-        videoFile: videoItem.videoFile
+        videoFile: videoItem.fileUrl
       })
       
       
