--- a/views/search.pug
+++ b/views/search.pug
@@ -5,9 +5,12 @@ block content
   .search__header 
     h3 You searched: #{searchingBy}
   .search__videos 
+    if videos.length === 0
+      h5 No Videos Found
     each videoItem in videos 
       +videoBlock({
+        id: videoItem.id,
         title: videoItem.title,
         views: videoItem.views,
-        videoFile: videoItem.videoFile
+        videoFile: videoItem.fileUrl
       })
