--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -2,10 +2,17 @@ extends layouts/main
 
 block content
   .video__player
-    video(src=`/${video.fileUrl}`) 
+    video(src=`/${video.fileUrl}`, controls) 
   .video__info
     a(href=routes.editVideo(video._id)) Edit Video
     h5.video__title=video.title
     span.video__views=video.views
     p.video__description=video.description
-  
+  .video__comment
+    if video.comments.length === 0
+      span.video__comment-number No Comment here!
+    else if video.comments.length === 1 
+      span.video__comment-number 1 comment
+    else 
+      span.video__comment-number #{video.comments.length} comments
+
