--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -5,6 +5,7 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" crossorigin="anonymous")
+    link(rel="stylesheet", href="/static/styles.css")
     title #{siteName} | #{pageTitle}
   body 
     include ../partials/header
@@ -13,3 +14,5 @@ html(lang="en")
       block content
       
     include ../partials/footer
+
+    script(src="/static/main.js")
