--- a/views/home.pug
+++ b/views/home.pug
@@ -2,8 +2,32 @@ extends layouts/main
 include mixins/videoBlock
 
 block content
-  .videos
+  .home-videos
     each videoItem in videos 
+      +videoBlock({
+        id: videoItem.id,
+        title: videoItem.title,
+        views: videoItem.views,
+        videoFile: videoItem.fileUrl
+      })
+      +videoBlock({
+        id: videoItem.id,
+        title: videoItem.title,
+        views: videoItem.views,
+        videoFile: videoItem.fileUrl
+      })
+      +videoBlock({
+        id: videoItem.id,
+        title: videoItem.title,
+        views: videoItem.views,
+        videoFile: videoItem.fileUrl
+      })
+      +videoBlock({
+        id: videoItem.id,
+        title: videoItem.title,
+        views: videoItem.views,
+        videoFile: videoItem.fileUrl
+      })
       +videoBlock({
         id: videoItem.id,
         title: videoItem.title,
