--- a/views/upload.pug
+++ b/views/upload.pug
@@ -3,8 +3,9 @@ extends layouts/main
 block content
   .form-container
     form(action=`/videos${routes.upload}`, method="post", enctype="multipart/form-data")
-      label(for="videoFile") Video File
-      input(type="file", id="file", name="videoFile", accept="video/*")
+      .fileUpload
+        label(for="videoFile") Video File
+        input(type="file", id="file", name="videoFile", accept="video/*")
       input(type="text", placeholder="Title", name="title")
       textarea(name="description", placeholder="Description")
       input(type="submit", value="Upload Video")
