--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -1,14 +1,13 @@
-extends layouts/main
+extends layouts/main.pug
 
 block content
-  .form-container
-    form(action=routes.editProfile method="post")
+  .form-container 
+    form(action=`/users/${routes.editProfile}`, method="post", enctype="multipart/form-data")
       .fileUpload
         label(for="avatar") Avatar
-        input(type="file" name="avatar" id="avatar")
-      input(type="text" name="name" placeholder="Name")
-      input(type="email" name="email" placeholder="Email")
+        input(type="file", name="avatar", id="avatar" accpet="image/*")
+      input(type="text" name="name" placeholder="Name", value=loggedUser.name)
+      input(type="email" name="email" placeholder="Email", value=loggedUser.email)
       input(type="submit" value="Update Profile")
-    a.form-container__link(href=routes.changePassword) 
+    a.form-container__link(href=`/users${routes.changePassword}`) 
       button Change Password
-    
