--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -5,14 +5,19 @@ block content
     video(src=`/${video.fileUrl}`, controls) 
 
   .video__info
-    a(href=routes.editVideo(video._id)) 
-      button Edit Video
+    if loggedUser
+      if video.creator.id === loggedUser.id
+        a(href=routes.editVideo(video._id))
+          button Edit Video
     h5.video__title=video.title
     p.video__description=video.description
     if video.views === 1
       span.video__views 1 view
     else 
       span.video__views #{video.views} views
+    .video__author 
+      |Uploaded by  
+      a(href=`/${routes.userDetail(video.creator.id)}`) #{video.creator.name}
 
   .video__comment
     if video.comments.length === 0
@@ -21,6 +26,4 @@ block content
       span.video__comment-number 1 comment
     else 
       span.video__comment-number #{video.comments.length} comments
-  .video__author 
-    |Uploaded by
-    a(href=routes.userDetail(1))=video.creator.name
+  
