--- a/views/home.pug
+++ b/views/home.pug
@@ -3,12 +3,12 @@ include mixins/videoBlock
 
 block content
   .home-videos
-    each videoItem in videos 
+    each item in videos 
       +videoBlock({
-        id: videoItem.id,
-        title: videoItem.title,
-        views: videoItem.views,
-        videoFile: videoItem.fileUrl
+        id: item.id,
+        title: item.title,
+        views: item.views,
+        videoFile: item.fileUrl
       })
       
       
