--- a/views/search.pug
+++ b/views/search.pug
@@ -8,10 +8,10 @@ block content
   .search__videos 
     if videos.length === 0
       h5 No Videos Found
-    each videoItem in videos 
+    each item in videos 
       +videoBlock({
-        id: videoItem.id,
-        title: videoItem.title,
-        views: videoItem.views,
-        videoFile: videoItem.fileUrl
+        id: item.id,
+        title: item.title,
+        views: item.views,
+        videoFile: item.fileUrl
       })
