--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -6,6 +6,7 @@ block content
     .user-profile__header
       img.u-avatar(src=user.avatarUrl)
       h4.profile__username=user.name
+
     if loggedUser
       if user.id === loggedUser.id
         .user-profile__btns
@@ -13,3 +14,13 @@ block content
             button ✏️ Edit Profile
           a(href=`/users${routes.changePassword}`)
             button 🔒 Change Password 
+
+    .uploaded-videos
+      each item in user.videos 
+        +videoBlock({
+          id: item.id,
+          title: item.title,
+          views: item.views,
+          videoFile: item.fileUrl,
+          creator: item.creator
+        })
